k8s/task-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: ai-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: us-central1-docker.pkg.dev/dev-ops-475910/danushka-ar/task-service:latest
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: ai-task
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
