k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-task-ingress-v8
  namespace: ai-task
  annotations:
    kubernetes.io/ingress.class: "gce"
    
spec:
  rules:
    - host: aitaskassistantcluster.danushka.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ai-processor
                port:
                  number: 8090
